syntax = "proto3";

option java_package = "com.farminos.print";
option java_multiple_files = true;

enum Driver {
  ESC_POS = 0;
  CPCL = 1;
}

enum Connection {
  BLUETOOTH = 0;
  WIFI = 1;
}

message PrinterSettings {
  bool enabled = 1;
  Driver driver = 2;
  int32 dpi = 3;
  float width = 4;
  float height = 5;
  float margin_cm = 6;
  bool cut = 7;
  float speed_limit = 8;
  float cut_delay = 9;
  float speedLimit = 8;
  float cutDelay = 9;
  Connection connection = 10;
}

message Settings {
  string default_printer = 1;
  map<string, PrinterSettings> printers = 2;
}
